# Robot-Operating-System-ROS-simulation-of-the-robotic-arm

./: README.md
arm_move/: CMakeLists.txt  package.xml
arm_move/launch/: spawn_world.launch  start_server.launch
arm_move/models/ur_cone/: model.config  model.sdf
arm_move/models/ur_cone/meshes/: base_link.STL
arm_move/scripts/: go_init.py  pick_pose.py  run_fixed_path.py
launch/: moveit.rviz  spawn_world.launch  ur5_single_arm_gazebo.launch
models/Jiazi_urdf/: CMakeLists.txt  model.config  model.sdf  package.xml
models/Jiazi_urdf/launch/: display.launch  gazebo.launch
models/Jiazi_urdf/meshes/: base_link.STL
models/Jiazi_urdf/urdf/: Jiazi_urdf.csv  Jiazi_urdf.urdf
models/Shiguan_urdf/: CMakeLists.txt  model.sdf  package.xml
models/Shiguan_urdf/launch/: display.launch  gazebo.launch
models/Shiguan_urdf/meshes/: base_link.STL
models/Shiguan_urdf/urdf/: Shiguan_urdf.csv  Shiguan_urdf.urdf
models/data/: path.txt
models/table1/meshes/: 888.dae
ur5_single_arm_moveit_config/config/: ur5.srdf
ur5_single_arm_tufts/launch/: spawn_object.launch
ur5_single_arm_tufts/models/123/: model.config  model.sdf
ur5_single_arm_tufts/models/Shiguan_urdf/: model.config
ur5_single_arm_tufts/models/table1/: model.sdf
ur5_single_arm_tufts/urdf/: gzplugin_grasp_fix.urdf.xacro  ur5.gv  ur5_single_arm.urdf.xacro
ur5_single_arm_tufts/urdf/objects/Apriltag36_11_00000/: model.sdf
ur5_single_arm_tufts/urdf/objects/Apriltag36_11_00001/: model.sdf
ur5_single_arm_tufts/urdf/objects/Apriltag36_11_00002/: model.sdf
urdf/: ur5_single_arm.urdf
worlds/: sim.world
(+1 files in other folders)
